--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhichen Wu"
-  avatar           : "profile.png"
+  avatar           : "self photo.jpg"
   bio              : 
   location         : "Oxford, UK"
   employer         :
