--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Zhichen Wu"
-  avatar           : "self photo.jpg"
+  avatar           : "Paris.jpg"
   bio              : "zhichen.wu@st-hildas.ox.ac.uk"
   location         : "Oxford, UK"
-  employer         :
+  employer         : "University of Oxford"
   pubmed           : 
   googlescholar    : 
   email            : "zhichen.wu@st-hildas.ox.ac.uk"
