--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Paris.jpg"
   bio              : "zhichen.wu@st-hildas.ox.ac.uk"
   location         : "Oxford, UK"
-  employer         : "University of Oxford"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            : "zhichen.wu@st-hildas.ox.ac.uk"
